--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="section" id="new">
             <h1><span>About Me</span></h1>
             <p>
-                Hey! I am Computer Science Engineering student at Sir M Visvesvaraya Institute of Technology.I am web development enthisuastic. Interseted in developing interactive websites using HTML,CSS and  JavaScript.
+                Hey! I am Computer Science Engineering student at Sir M Visvesvaraya Institute of Technology. I am web development enthusiastic. Seeking for an opportunity to enhance my skills and knowledge.
             </p>
         </div>
         <div id="ed">
