--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <div class="section" id="new">
             <h1><span>Education</span></h1>
             <ul>
-                <li><a href="https://www.sirmvit.edu/">Sir M Visvesvaraya Institute of Technology,Bangalore</a><br />
+                <li><a href="https://www.sirmvit.edu/" target="_blank">Sir M Visvesvaraya Institute of Technology,Bangalore</a><br />
                     BE | Computer Science<br>
                     Avg. CGPA(upto 5th sem)-7.59
                 </li>
-                <li><a href="https://www.sfscollege.in/">St Francis De Sales College,Bangalore</a><br />
+                <li><a href="https://www.sfscollege.in/" target="_blank">St Francis De Sales College,Bangalore</a><br />
                    PUC | Percentage-84.33
                 </li>
                 <li>SVP,Tiptur<br />
@@ -71,7 +71,7 @@
             <ul>
                 <li>Art Gallery Management System<br />
                    <p>It's a Mini Project on Database Management Sytsem.Arts of artists can be showcased and customers can know about artists and buy arts from store.</p>
-                   <a href="https://drive.google.com/drive/folders/1Jt8H2UjUVPrvbTU7OFjYBT1CnQOPPfUW?usp=sharing">Project Link</a>
+                   <a href="https://drive.google.com/drive/folders/1Jt8H2UjUVPrvbTU7OFjYBT1CnQOPPfUW?usp=sharing" target="_blank">Project Link</a>
                 </li>
             </ul>
         </div>
