--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             <img alt="" class="img-circle" src="images/nv.jpg">
             <p>Naveen C</p>
             <div class="tex">9972263713 | <a href="mailto:naveennavi077@gmail.com">naveennavi077@gmail.com</a></div>
+		   <div align="center" id="res">
+                <a href="images/resume.pdf" download target="_blank">
+                    <button>View Resume</button>
+                </a>
+            </div>
      </div>
       <div class="section" id="new">
             <h1><span>About Me</span></h1>
