--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
             <ul>
                 <li><a href="https://www.sirmvit.edu/" target="_blank">Sir M Visvesvaraya Institute of Technology,Bangalore</a><br />
                     BE | Computer Science<br>
-                    Avg. CGPA(upto 5th sem)-7.59
+                    Avg. CGPA(upto 5th sem)-7.89
                 </li>
                 <li><a href="https://www.sfscollege.in/" target="_blank">St Francis De Sales College,Bangalore</a><br />
                    PUC | Percentage-84.33
                 </li>
                 <li>SVP,Tiptur<br />
-                   10th | Percentage-85.33
+                   10th | Percentage-85.44
                 </li>
             </ul>
         </div>
@@ -50,6 +50,9 @@
         <div class="section" id="new">
             <h1><span>My Skills</span></h1>
             <ul>
+		<li>Python(Beginner) <br />
+		    <progress min="0" max="100" value="85"></progress>
+                </li>
                 <li>HTML <br />
                     <progress min="0" max="100" value="80"></progress>
                 </li>
@@ -64,9 +67,7 @@
                 </li>
                  <li>Java <br />
                  	<progress min="0" max="100" value="60"></progress>
-                </li>
-                 <li>Python(Beginner) <br />
-                </li>
+		 </li>
             </ul>
         </div>
         </div>
