--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         
         <div class="copyright">
-            &copy; 2020 Naveen C. All rights reserved.
+            &copy; 2020 Naveen C.
         </div>
 
 </body>
