--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="section" id="new">
             <h1><span>My Skills</span></h1>
             <ul>
-		<li>Python(Beginner) <br />
+		<li>Python <br />
 		    <progress min="0" max="100" value="85"></progress>
                 </li>
                 <li>HTML <br />
